--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="./public/main.js"></script>
+    <script src="public/bundle.js"></script>
   </body>
 </html>
